@@ -1,3 +1,7 @@
+2024-02-29  Luigi Scarso <luigi.scarso@gmail.com>
+	* Default output of \tracingmacros as in pdftex; texconfig.trace_extra_newline adds a newline in \tracingmacros as before (H.Hagen).
+
+
 2024-02-20  Luigi Scarso <luigi.scarso@gmail.com>
 	* in kpse mode, --shell-escape enable the standard lfs.* and os.* functions otherwise protected
         * fixed lfs.mkdirp return value
